--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
       <button onclick="resetAll()">Reset All</button>
     </div>
 
-    <div class="tabs" id="tabButtons"></div>
+    <!-- Tabs -->
+    <div class="tabs" id="tabButtons">
+      <button class="tab-btn" onclick="switchTab('web')">Web Bugs</button>
+      <button class="tab-btn" onclick="switchTab('api')">API Bugs</button>
+      <button class="tab-btn" onclick="switchTab('logic')">Business Logic Bugs</button>
+    </div>
+
+    <!-- Tab Content -->
     <div id="list"></div>
 
     <div id="notesBox" class="section">
@@ -37,6 +44,8 @@
 
 </div>
 
+<script src="bugs.js"></script>
 <script src="app.js"></script>
+
 </body>
 </html>
