--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bug Bounty Checklist – Subdomain Mode</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./CSS/styles.css" />
 </head>
 <body>
   <div class="layout">
@@ -25,6 +25,7 @@
         <button onclick="exportJSON()">Export JSON</button>
         <button onclick="importJSON()">Import JSON</button>
         <button onclick="showSummary()">Summary</button>
+        <button ><a href="./tools.html" target="_blank">Tools</a></button>
         <button onclick="resetAll()">Reset All</button>
       </div>
 
@@ -48,7 +49,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="bugs.js"></script>
-  <script src="app.js"></script>
+  <script src="./js/bugs.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
