--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <button onclick="resetAll()">Reset All</button>
       </div>
 
-      <!-- Tabs
+      Tabs
       <div class="tabs" id="tabButtons">
-        <button class="tab-btn" onclick="switchTab('web')">Web Bugs</button>
+        <button class="tab-btn" onclick="switchTab('javascript')">javascript Bugs</button>
         <button class="tab-btn" onclick="switchTab('api')">API Bugs</button>
         <button class="tab-btn" onclick="switchTab('logic')">Business Logic Bugs</button>
-      </div> -->
+      </div>
 
       <!-- Checklist Area -->
       <div id="list"></div>
